[package]
authors = [
    "Danilo Bargen <mail@dbrgn.ch>",
    "Niklas Mohrin <dev@niklasmohrin.de>",
]
description = "Fetch and show tldr help pages for many CLI commands. Full featured offline client with caching support."
homepage = "https://github.com/tealdeer-rs/tealdeer/"
license = "MIT OR Apache-2.0"
name = "tealdeer"
readme = "README.md"
repository = "https://github.com/tealdeer-rs/tealdeer/"
documentation = "https://tealdeer-rs.github.io/tealdeer/"
version = "1.7.2"
include = ["/src/**/*", "/tests/**/*", "/Cargo.toml", "/README.md", "/LICENSE-*", "/screenshot.png", "completion/*"]
rust-version = "1.80"
edition = "2021"

[[bin]]
name = "tldr"
path = "src/main.rs"

[dependencies]
anyhow = "1"
app_dirs = { version = "2", package = "app_dirs2" }
clap = { version = "4", features = ["std", "derive", "help", "usage", "cargo", "error-context", "color", "wrap_help"], default-features = false }
env_logger = { version = "0.11", optional = true }
log = "0.4"
serde = "1.0.21"
serde_derive = "1.0.21"
ureq = { version = "3.0.8", default-features = false, features = ["gzip"] }
toml = "0.8.19"
yansi = "1"
zip = { version = "2.3.0", default-features = false, features = ["deflate"] }

[target.'cfg(not(windows))'.dependencies]
pager = "0.16"

[dev-dependencies]
assert_cmd = "2.0.1"
escargot = "0.5"
predicates = "3.1.2"
tempfile = "3.1.0"
filetime = "0.2.10"

[features]
default = ["native-tls", "rustls-with-webpki-roots", "rustls-with-native-roots"]
logging = ["env_logger"]

# At least one of variants for `ureq` HTTP client must be selected.
native-tls = ["ureq/native-tls", "ureq/platform-verifier"]
rustls-with-webpki-roots = ["ureq/rustls"] # ureq uses WebPKI roots by default
rustls-with-native-roots = ["ureq/rustls", "ureq/platform-verifier"]

ignore-online-tests = []

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
