[package]
authors = [
    "Danilo Bargen <mail@dbrgn.ch>",
    "Niklas Mohrin <dev@niklasmohrin.de>",
]
description = "Fetch and show tldr help pages for many CLI commands. Full featured offline client with caching support."
homepage = "https://github.com/dbrgn/tealdeer/"
license = "MIT/Apache-2.0"
name = "tealdeer"
readme = "README.md"
repository = "https://github.com/dbrgn/tealdeer/"
documentation = "https://dbrgn.github.io/tealdeer/"
version = "1.5.1"
include = ["/src/**/*", "/tests/**/*", "/Cargo.toml", "/README.md", "/LICENSE-*", "/screenshot.png", "/bash_tealdeer", "/fish_tealdeer"]
edition = "2018"

[[bin]]
name = "tldr"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.0"
app_dirs = { version = "2", package = "app_dirs2" }
atty = "0.2"
clap = { version = "=3.0.0-rc.11", features = ["std", "derive", "suggestions", "color"], default-features = false }
env_logger = { version = "0.9", optional = true }
log = "0.4"
reqwest = { version = "0.11.3", features = ["blocking", "rustls-tls", "rustls-tls-native-roots"], default-features = false }
serde = "1.0.21"
serde_derive = "1.0.21"
toml = "0.5.1"
walkdir = "2.0.1"
zip = { version = "0.5", default-features = false, features = ["deflate"] }

[target.'cfg(not(windows))'.dependencies]
pager = "0.16"

[dev-dependencies]
assert_cmd = "2.0.1"
escargot = "0.5"
predicates = "2.0.2"
tempfile = "3.1.0"
filetime = "0.2.10"

[features]
logging = ["env_logger"]

[profile.release]
lto = true
